@@ -14139,6 +14139,154 @@ name|length
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+name|void
+name|testCheckRevision
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// mod12.2 depends on mod12.1 1.0 which depends on mod1.2
+comment|// mod12.1 doesn't have revision in its ivy file
+name|ResolveReport
+name|report
+init|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/2/mod12.2/ivy-1.0.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|_ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org12"
+argument_list|,
+literal|"mod12.1"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org12"
+argument_list|,
+literal|"mod12.1"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"mod12.1"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|_ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 comment|////////////////////////////////////////////////////////////
 comment|// helper methods to ease the tests
 comment|////////////////////////////////////////////////////////////
