@@ -1,6 +1,7 @@
 - IMPROVE: add possibility to choose matcher on include exclude and conflict manager rules (IVY-161)
 - IMPROVE: add regexp management in the install ant task (IVY-154)
 
+- FIX: resolve fails without appropriate message when cache is empty and a module in the repository has no revision (IVY-165)
 - FIX: resolve problem with configuration inheritance (IVY-164)
 - FIX: some files in cache detected by not used by Ivy for subsequent retrieves (IVY-159)
 - FIX: HTML report shouldn't display the dependencies of evicted modules (IVY-158) (thanks to Maarten Coene)
